# Estrela_do_Saber

./: README.md
backend/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
backend/src/agents/: __init__.py  orchestrator.py  question_agent.py  report_agent.py  tts_agent.py
backend/src/api/: __init__.py  main.py
backend/src/db/: models.py
backend/tests/: __init__.py  mock_game.py
frontend/: README.md  pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/api/: api.dart
frontend/lib/overlays/: main_menu.dart
